# Clockwerk

./: .gitignore  CMakeLists.txt  README.md
configs/: sim.yaml
docs/: architecture-and-interfaces.md  development-plan.md  project-scope.md
include/clockwerk/core/: enums.hpp
include/clockwerk/decision/: state_machine.hpp
scripts/: build.sh  run_mock_sim.sh  test_all.sh  test_cpp.sh  test_python.sh
src/decision/: state_machine.cpp
tests/cpp/: test_state_machine.cpp
tests/python/: test_mock_quadruped_sim.py
tools/sim/: launch_isaaclab.py  mock_quadruped_sim.py  replay_log.py
